phase2_Dev/src/objects/Document_Type__c.object
<CustomObject>
    <description>An object for storing all document types. This is not to be confused with document prototypes (i.e. image/jpeg, document/pdf, etc)</description>
    <fields>
        <fullName>Allow_use_of_Umbrella_Level_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Use of Umbrella Level Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A description for the document type.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Type_Name__c</fullName>
        <label>Document Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Individual Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LEAD_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Provider Type</label>
        <referenceTo>LEAD_Configuration__c</referenceTo>
        <relationshipLabel>Document Types</relationshipLabel>
        <relationshipName>Document_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Library_Level__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If check, this document type will appear in the library of all providers this document type is defined on - per type of provider</inlineHelpText>
        <label>Library Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_to_be_Updated_at_each_new_Transacti__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Update Each New Transaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Optional_for_Transactio_Type__c</fullName>
        <globalPicklist>Transaction_Types</globalPicklist>
        <label>Optional for Transaction Type</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Related_Role__c</fullName>
        <label>Related Role</label>
        <picklist>
            <picklistValues>
                <fullName>Executive Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Director / Administrative Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Designee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infant / Toddler Responsible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Chair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Contact</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required_for_Transaction_Type__c</fullName>
        <globalPicklist>Transaction_Types</globalPicklist>
        <label>Required for Transaction Type</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Submit_Transaction_Only_If_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, a transaction that requires this document will not be able to be submitted before this document has a valid attachment</inlineHelpText>
        <label>Submit Transaction Only If Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Type</label>
    <nameField>
        <label>Document Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Unique_Type_Name</fullName>
        <active>true</active>
        <errorConditionFormula>AND(CONTAINS(VLOOKUP( $ObjectType.Document_Type__c.Fields.Name , $ObjectType.Document_Type__c.Fields.Name, Name), Name), OR(ISNEW(), ISCHANGED(Name)) )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>There is already a document type with this name. Please enter a new one.</errorMessage>
    </validationRules>
</CustomObject>